<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/tv_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:hint="@string/name_hint"
            android:text="@string/NaN"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lline2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lline1">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/tv_deadline"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etDeadline"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/set_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#F1EFEF"
            android:onClick="setDate"
            android:text="@string/select_date"
            android:textColor="#546E7A"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lline2">

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/tv_status"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etStatus"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:hint="@string/status_hint"
            android:text="@string/NaN"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/insertData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="270dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/insert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="270dp"
        android:backgroundTint="#E91E63"
        android:text="@string/reject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>