<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="4dp"
    android:background="@color/purple_200"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg">

        <LinearLayout
            android:id="@+id/linearLayoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textAlignment="center"
                android:textColor="@color/purple_200"
                tools:ignore="TextContrastCheck" />

            <View
                android:id="@+id/vStatus"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@color/green"
                android:padding="0dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutTop"
            android:layout_centerHorizontal="true"
            android:padding="4dp"
            android:text="@string/name"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />


        <TextView
            android:id="@+id/tvDeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/_2022_04_02"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDeadline"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/edit"
                android:textColor="#fff"
                tools:ignore="TextContrastCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/deleteBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textColor="#FF0000"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>